todo option overflow problem fixed

--- a/src/assets/styles/components/todo-list.css
+++ b/src/assets/styles/components/todo-list.css
@@ -53,3 +53,11 @@
 .todolist_item {
   @apply bg-slate-50 dark:bg-slate-50/5 shadow;
 }
+
+.collapse-open {
+  @apply overflow-visible;
+}
+
+.collapse-open .todolist_body {
+  @apply py-6 overflow-visible;
+}
